--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         </div>
 
     </div>
-    <script src='js/lib/knockout-3.4.2.js'></script>
-    <script src='js/lib/jquery-3.1.1.min.js'></script>
-    <script src='js/app.js'></script>
+    <script src="js/lib/knockout-3.4.2.js"></script>
+    <script src="js/lib/jquery-3.1.1.min.js"></script>
+    <script src="js/app.js"></script>
    
- <script defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyDGcdsnQ72Qp8y9sPF17_IAeDxQuokHXkk&v=3&callback=initMap" onerror="googleError()">
+<script  async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyDGcdsnQ72Qp8y9sPF17_IAeDxQuokHXkk&v=3&callback=initMap" onerror="googleError()">
    </script>
    
 <!-- To check google map error - use following url -->  
-<!--<script defer src="https://maps.googleeeeeeeeeeeeeeeapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyDGcdsnQ72Qp8y9sPF17_IAeDxQuokHXkk&v=3&callback=initMap" onerror="googleError()">
+<!--<script async defer src="https://maps.googleeeeeeeeeeeeeeeapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyDGcdsnQ72Qp8y9sPF17_IAeDxQuokHXkk&v=3&callback=initMap" onerror="googleError()">
     </script> -->
 
 </body>
